Agenda 153, 17 February 2026 and RSS updates

--- a/meeting/agenda/index.org
+++ b/meeting/agenda/index.org
@@ -22,6 +22,7 @@ These are the agendas. The [[../minutes/][minutes]] are also published.
 :CUSTOM_ID: agendas-2026
 :END:
 
++ [[./2026/02-17.html][Meeting 153]], 17 February
 + [[./2026/02-10.html][Meeting 152]], 10 February
 + [[./2026/02-03.html][Meeting 151]], 3 February
 + [[./2026/01-27.html][Meeting 150]], 27 January
