Draft minutes 153, 17 February 2026 and RSS updates

--- a/meeting/minutes/2026/02-10.org
+++ b/meeting/minutes/2026/02-10.org
@@ -19,11 +19,13 @@
 
 #+TOC: headlines 6
 
-* Draft Minutes
+* Minutes
 :PROPERTIES:
 :unnumbered: t
 :CUSTOM_ID: minutes
 :END:
+
+Approved [[../2026/02-17.html][at meeting 153]] on 17 February 2026.
 
 * Summary of new and continuing actions [0/5]
 :PROPERTIES:
