--- a/meeting/minutes/index.org
+++ b/meeting/minutes/index.org
@@ -23,6 +23,7 @@ The [[../agenda/][agendas]] are also published.
 :CUSTOM_ID: minutes-2026
 :END:
 
++ [[./2026/02-17.html][Meeting 153]], 17 February
 + [[./2026/02-10.html][Meeting 152]], 10 February
 + [[./2026/02-03.html][Meeting 151]], 3 February
 + [[./2026/01-27.html][Meeting 150]], 27 January
